# safessh

./: .gitignore  .kata.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
crates/safessh-audit/: Cargo.toml
crates/safessh-audit/src/: event.rs  jsonl.rs  lib.rs  query.rs
crates/safessh-audit/src/sqlite/: mod.rs
crates/safessh-audit/src/sqlite/migrations/: V1__initial.sql
crates/safessh-audit/tests/: jsonl.rs  query.rs  query_proptest.rs  sqlite_index.rs  tunnel_events.rs
crates/safessh-cli/: Cargo.toml
crates/safessh-cli/src/: cli.rs  errors.rs  lib.rs  main.rs  output.rs  prompt.rs  supervisor.rs
crates/safessh-cli/src/commands/: approve.rs  audit.rs  exec.rs  file_common.rs  forward.rs  interactive.rs  mod.rs  policy.rs  project.rs  read.rs  skill.rs  skill_helper.rs  tunnels.rs  write.rs
crates/safessh-cli/tests/: approve_cmd.rs  dispatch.rs  e2e_integration.rs  exec.rs  forward_cli.rs  misc_cmds.rs  project_cmd.rs  project_import.rs  project_target.rs  read_cli.rs  skeleton.rs  supervisor_inline.rs  tui_subcommand.rs  tunnels_cli.rs  write_cli.rs  yolo.rs
crates/safessh-cli/tests/common/: mod.rs
crates/safessh-core/: Cargo.toml
crates/safessh-core/src/: error.rs  lib.rs  redactor.rs  tunnel.rs  types.rs
crates/safessh-core/tests/: redactor.rs  tunnel_types.rs  types.rs
crates/safessh-policy/: Cargo.toml
crates/safessh-policy/src/: ast.rs  decision.rs  lib.rs  parser.rs
crates/safessh-policy/src/categories/: mod.rs  shell.rs  sql.rs
crates/safessh-policy/tests/: categories_shell.rs  categories_sql.rs  decide_tunnel.rs  decision.rs  file_decision.rs  parser.rs
crates/safessh-skill/: Cargo.toml
crates/safessh-skill/src/: detection.rs  install.rs  lib.rs  sections.rs
crates/safessh-skill/src/adapters/: agents_md.rs  claude_code.rs  codex.rs  cursor.rs  gemini_cli.rs  mod.rs  plain.rs
crates/safessh-skill/src/content/: safessh.md
crates/safessh-skill/tests/: adapters.rs  install.rs  skill_content.rs
crates/safessh-skill/tests/snapshots/: adapters__agents_md.snap  adapters__claude_code.snap  adapters__codex_format_snapshot.snap  adapters__cursor_format_snapshot.snap  adapters__plain_format_snapshot.snap
crates/safessh-ssh/: Cargo.toml
crates/safessh-ssh/src/: control_master.rs  driver.rs  lib.rs  mock.rs  openssh.rs
crates/safessh-ssh/tests/: mock.rs  mock_files.rs  mock_tunnel.rs  openssh_integration.rs  openssh_unit.rs  tunnel_integration.rs
crates/safessh-ssh/tests/fixtures/: test_key  test_key.pub
crates/safessh-storage/: Cargo.toml
crates/safessh-storage/src/: approvals.rs  atomic.rs  config.rs  keyring.rs  lib.rs  locking.rs  paths.rs  project.rs  ssh_config.rs  tunnels.rs
crates/safessh-storage/src/policies/: mod.rs  presets.toml
crates/safessh-storage/tests/: approvals.rs  atomic.rs  file_rules.rs  keyring.rs  presets.rs  project.rs  schema_v04.rs  ssh_config.rs  tunnels.rs
crates/safessh-tui/: Cargo.toml
crates/safessh-tui/src/: app.rs  event.rs  help.rs  lib.rs  theme.rs  watcher.rs  widgets.rs
crates/safessh-tui/src/screens/: approvals.rs  audit.rs  mod.rs  projects.rs  rules.rs
crates/safessh-tui/tests/: approvals_actions.rs  approvals_snapshot.rs  approvals_tunnel.rs  audit_filters.rs  audit_snapshot.rs  audit_tunnel_summary.rs  projects_import.rs  projects_snapshot.rs  routing.rs  rules_actions.rs  rules_snapshot.rs  toast.rs  watcher.rs
crates/safessh-tui/tests/snapshots/: approvals_snapshot__empty_state.snap  approvals_snapshot__one_file_read_pending_request.snap  approvals_snapshot__one_pending_request.snap  audit_snapshot__empty_state.snap  audit_snapshot__renders_file_events_with_formatted_bytes.snap  audit_snapshot__renders_recent_events.snap  projects_snapshot__empty_state.snap  projects_snapshot__one_project_with_two_targets.snap  rules_snapshot__empty_timed_tab.snap  rules_snapshot__populated_always_tab.snap  rules_snapshot__populated_blocked_tab.snap  rules_snapshot__rules_file_tab_empty.snap  rules_snapshot__rules_file_tab_populated.snap
docs/: RELEASE-CHECKLIST.md  approvals.md  audit.md  cli-reference.md  development.md  files.md  getting-started.md  policy.md  projects.md  security.md  skill.md  tui.md  tunnels.md
docs/superpowers/plans/: 2026-04-30-safessh-v0.1.0.md  2026-04-30-safessh-v0.1.0.md.tasks.json  2026-05-01-safessh-v0.2.0.md  2026-05-01-safessh-v0.2.0.md.tasks.json  2026-05-02-safessh-v0.3.0.md  2026-05-02-safessh-v0.3.0.md.tasks.json  2026-05-02-safessh-v0.4.0.md  2026-05-02-safessh-v0.4.0.md.tasks.json  2026-05-03-safessh-v0.5-v0.6.md  2026-05-03-safessh-v0.5-v0.6.md.tasks.json
docs/superpowers/specs/: 2026-04-30-safessh-design.md  2026-05-02-safessh-v0.3-file-ops-design.md  2026-05-03-safessh-brand-positioning.md  2026-05-03-safessh-v0.5-v0.6-design.md
tests/fixtures/: gen-keys.sh
