[workspace]
resolver = "2"
members = [
    "crates/safessh-core",
    "crates/safessh-storage",
    "crates/safessh-policy",
    "crates/safessh-audit",
    "crates/safessh-ssh",
    "crates/safessh-skill",
    "crates/safessh-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sanif/safessh"
readme = "README.md"

[workspace.dependencies]
# Internal
safessh-core    = { path = "crates/safessh-core",    version = "0.1.0" }
safessh-storage = { path = "crates/safessh-storage", version = "0.1.0" }
safessh-policy  = { path = "crates/safessh-policy",  version = "0.1.0" }
safessh-audit   = { path = "crates/safessh-audit",   version = "0.1.0" }
safessh-ssh     = { path = "crates/safessh-ssh",     version = "0.1.0" }
safessh-skill   = { path = "crates/safessh-skill",   version = "0.1.0" }

# Common
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
thiserror   = "1"
anyhow      = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest    = "1"
insta       = { version = "1", features = ["yaml", "redactions"] }
tempfile    = "3"
mockall     = "0.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
