[package]
name = "safessh-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
safessh-core = { workspace = true }
safessh-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
