[package]
name = "safessh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe SSH executor with policy-driven approvals and audit logging"
homepage = "https://github.com/sanifss/safessh"

[[bin]]
name = "safessh"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
