[package]
name = "safessh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe SSH executor with policy-driven approvals and audit logging"
homepage = "https://github.com/sanifss/safessh"

[[bin]]
name = "safessh"
path = "src/main.rs"

[dependencies]
safessh-core    = { workspace = true }
safessh-storage = { workspace = true }
safessh-policy  = { workspace = true }
safessh-audit   = { workspace = true }
safessh-ssh     = { workspace = true }
safessh-skill   = { workspace = true }
clap            = { version = "4", features = ["derive"] }
tokio           = { workspace = true }
anyhow          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
chrono          = { version = "0.4", features = ["serde"] }
atty            = "0.2"
dialoguer       = "0.11"
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd      = "2"
predicates      = "3"
tempfile        = { workspace = true }
testcontainers  = "0.27"

[features]
# Enables the end-to-end integration test suite (`tests/e2e_integration.rs`),
# which spins up a real `linuxserver/openssh-server` Docker container.
# Tests skip+pass automatically when Docker is unavailable.
integration = ["safessh-ssh/integration"]
