[package]
name = "safessh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
