[package]
name = "safessh-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
safessh-core = { workspace = true }
safessh-storage = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
conch-parser = "0.1"
globset = "0.4"
shell-words = "1"
sqlparser = "0.45"

[dev-dependencies]
proptest = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
