[package]
name = "safessh-skill"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
safessh-core = { workspace = true }
safessh-storage = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
dirs = "5"

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
