[package]
name = "safessh-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
safessh-core = { workspace = true }
safessh-storage = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
futures = "0.3"
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true }
tempfile       = { workspace = true }
testcontainers = "0.27"

[features]
integration = []
