[package]
name = "safessh-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
safessh-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
fs2 = "0.4"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
keyring = "2"
ssh2-config = "0.3"

[features]
test-support = []

[dev-dependencies]
tempfile = { workspace = true }
filetime = "0.2"
